Miners try to pick up required tool (pickaxe) before mining

--- a/todo.org
+++ b/todo.org
@@ -19,3 +19,4 @@
 gnome-citadel: the identifer 'Tile {_id = Identifier 22, _charRepr =
 '#'}' has no assigned coordinate
 - don't do it twice if same task present (different equality check)
+*** BUG Mining task is assigned although tool not available
